# sunshine-shader

./: Cargo.toml  README.md
assets/colette/: LICENSE.html
assets/shaders/: bubbles.wgsl  noisy_vert.wgsl  noisy_verts.wgsl  perlin.wgsl
src/: bubbles.rs  main.rs  noisy.rs
src/bubbles/: pipeline.rs
