[package]
name = "mario-particles"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
# https://github.com/bevyengine/bevy/pull/7820
bevy = { git = "https://github.com/robtfm/bevy", rev = "63efd52711dcb7e7efccdb8d2539cf7942a5a44c" }
inline_tweak = "1.0.9"

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking"]
